--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -3,12 +3,20 @@ name: Prettier Check
 on:
   push:
     branches:
+      - main
+      - develop
       - "**"
+  pull_request:
+    branches:
+      - main
+      - develop
 
 jobs:
-  prettier:
+  prettier-check-pr:
+    if: github.event_name == 'pull_request'
     runs-on: ubuntu-latest
-
+    name: Prettier Check (PR)
+    
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -18,5 +26,49 @@ jobs:
         with:
           node-version: "18"
 
-      - name: Format JS files
-        run: npx prettier --write "**/*.js"
+      - name: Check formatting
+        run: npx prettier --check "**/*.js"
+
+  prettier-auto-format-main:
+    if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop')
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    name: Prettier Auto-format (Main/Develop)
+    
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Check if last commit is from Prettier
+        id: check_last_commit
+        run: |
+          LAST_COMMIT_MESSAGE=$(git log -1 --pretty=%B)
+          if [[ "$LAST_COMMIT_MESSAGE" == "style: auto-format with Prettier" ]]; then
+            echo "Last commit is from Prettier, skipping"
+            echo "skip=true" >> $GITHUB_OUTPUT
+            exit 0
+          fi
+
+      - name: Setup Node.js
+        if: steps.check_last_commit.outputs.skip != 'true'
+        uses: actions/setup-node@v4
+        with:
+          node-version: "18"
+
+      - name: Format and commit
+        if: steps.check_last_commit.outputs.skip != 'true'
+        run: |
+          npx prettier --write "**/*.js"
+          
+          if git diff --quiet; then
+            echo "No formatting changes needed"
+          else
+            git config --global user.name 'github-actions[bot]'
+            git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+            git add -A
+            git commit -m "style: auto-format with Prettier"
+            git push
+          fi
